--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     font-family:'poppins','sans-serif';
 }
 .banner {
-    background-image: url(./css/background\(new\ new\ \).jpg);
+    background-image: url(../image/background\(new\ new\ \).jpg);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 250px 0;
